--- a/public/css/login.css
+++ b/public/css/login.css
@@ -4,7 +4,7 @@
 			margin: 0;
 			padding: 0;
 			height: 100%;
-			background: #FFF !important;
+			background: url("../img/BACKGROUND-PNG1.png");
 		}
 		.user_card {
 			height: 400px;
@@ -22,6 +22,10 @@
 			-moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 			border-radius: 5px;
 
+		}
+
+		.logo-garanhuns{
+			display: none;
 		}
 		.brand_logo_container {
 			position: absolute;
