--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17564,14 +17564,17 @@ a.text-dark:hover {
 }
 
 .chart_div_est {
-    width: 100%
+    width: 100%;
+    height: 100%;
+    
 }
 
 .graphcs {
     padding-right: 1px;
     padding-left: 1px;
     flex: 0 0 33%;
-    max-width: 33%
+    max-width: 33%;
+    min-height: 250px;
 }
 
 .reduc {
@@ -17616,4 +17619,39 @@ a.text-dark:hover {
 .aligh-center {
     align-self: center;
 }
+
+.graph-table{
+    margin-bottom: 1px;
+    width:100%;
+    align-content: center;
+}
+
+.graph-table tr td{
+    margin: 0px;
+    border-top: 4px ridge rgba(63,63,63,.3);
+}
+
+.graph-table tr td{
+    align-self: center;
+    border-left: 1px ridge rgba(63,63,63,.3);
+}
+
+.graph-table th{
+    background: rgba(63,63,63,.1);
+    border-left: 1px ridge rgba(63,63,63,.3);
+}
+.graph-table tr:hover td{
+    color: #3f3f3f;
+    background-color: rgba(0, 170, 187,.5);
+    cursor: default;
+}
+
+.card-modelo2 {
+    background-color: rgba(0, 170, 187);
+    color: #f3f3f3;
+    text-shadow: 1px 1px #000;
+}
+
+
+
 >>>>>>>Stashed changes
