Ajustado o sistema de criação e edição do cardápio para ficar unificado em editar. Padronizado a visualização do cardápio. Ajustado o botão de voltar do VisualizarItensRefeição para voltar a pagina anterior e não uma pagina fixa de Refeição. Removido a view de CadastrarCardapioSemanal pois sua função foi mesclada com EditarCardapioSemanal. Ajustado o app.css para um novo modelo de layout dos links de url. Removida as funções referente a CadastroCardapioSemanal do CardapioController.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17710,5 +17710,9 @@ a.text-dark:hover {
     background: transparent;
 }
 
+.cabecalho_semana_cardapio{
+    background: rgba(63,63,63,.2);
+}
+
 
 >>>>>>>Stashed changes
